--- a/css/Navg/img.css
+++ b/css/Navg/img.css
@@ -29,6 +29,9 @@ ul.breadcrumb {
     max-width:600px;
     height: auto;
     }
+    h2 {
+        font-size: 50px;
+        }
     .barra {
         width: 100%;
         max-width:150px;
@@ -36,7 +39,7 @@ ul.breadcrumb {
         }
         .tam4{
             width: 100%;
-            max-width:600px;
+            max-width:500px;
             height: auto;
             }
 td { padding:0px;}
@@ -113,3 +116,8 @@ table td:last-child {
 border-bottom: 0;
 }
 }
+.fundo{
+    width: auto;
+    max-width:300px;
+    height: auto;
+    }
