--- a/css/Navg/navegacao.css
+++ b/css/Navg/navegacao.css
@@ -108,7 +108,7 @@ body {
       }
 
       a { 
-        color:purple; 
+        color:rgb(255, 255, 255); 
         text-decoration: none;
       } 
       ul {
