--- a/css/Navg/navegacao.css
+++ b/css/Navg/navegacao.css
@@ -57,10 +57,10 @@ body {
   background-size:150%;
 }
 .ajuste {
-    width: 100%;
-    max-width:700px;
-    height: auto;
-    }
+  width: 100%;
+  max-width:700px;
+  height: auto;
+  }
 .footer {
         padding: 20px;
         text-align: center;
@@ -173,4 +173,9 @@ body {
       }
       ::-webkit-scrollbar {
         display: none;
+    }
+
+    .MenuEsquerdo{
+      float: right;
+      text-align: right;
     }
